--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --third-color: #b1d1ed;
   --fourth-color: #7aa7ce;
   --bg-light: #ee8f3b;
+  --bg-white: #fff;
   --light-color: #eeeeee;
   --form-color: #bdbdbd;
   --dark-color: #222;
