--- a/css/style.css
+++ b/css/style.css
@@ -239,12 +239,12 @@ img {
 }
 
 .gal-4 {
-  background: url("../img/Nepal/villagers-boys.jpg") top center;
+  background: url("../img/Nepal/begnas-lake.jpg") top center;
   background-size: cover;
 }
 
 .gal-5 {
-  background: url("../img/Nepal/mountain-village.jpg") center center/cover;
+  background: url("../img/Nepal/misty-village.jpg") center center/cover;
   background-size: cover;
 }
 
