--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ img {
 }
 
 .gal-5 {
-  background: url("../img/Nepal/misty-village.jpg") center center/cover;
+  background: url("../img/Nepal/bandipur.jpg") center center/cover;
   background-size: cover;
 }
 
@@ -266,7 +266,7 @@ img {
 }
 
 .gal-9 {
-  background: url("../img/Nepal/temple-2.jpg") center center/cover;
+  background: url("../img/Nepal/misty-village.jpg") center center/cover;
   background-size: cover;
 }
 
