--- a/css/mobile.css
+++ b/css/mobile.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   flex-direction: column;
 }
@@ -12,7 +12,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 2;
+  z-index: 3;
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -23,7 +23,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   width: 60px;
   height: 60px;
   padding: 1rem;
@@ -53,7 +53,7 @@
 .menu-wrap .hamburger > div:after {
   content: "";
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: -10px;
   width: 100%;
   height: 2px;
@@ -162,6 +162,10 @@
 
 .form {
   margin: 10px 0;
+}
+
+#donate-main .maintenance-txt {
+  margin-left: 0;
 }
 
 @media (max-width: 768px) {
