--- a/css/mobile.css
+++ b/css/mobile.css
@@ -210,18 +210,18 @@
   }
 
   .gal-4 {
-    background: url("../images/Nepal/webp/begnas-lake.webp") top center;
+    background: url("../images/jpg/Nepal/begnas-lake.jpg") top center;
     background-size: cover;
     grid-column: 1 / span 2;
   }
 
   .gal-5 {
-    background: url("../images/Nepal/webp/bandipur.webp") center center/cover;
+    background: url("../images/jpg/Nepal/bandipur.jpg") center center/cover;
     background-size: cover;
   }
 
   .gal-6 {
-    background: url("../images/webp/mountain-3.webp") center center/cover;
+    background: url("../images/jpg/mountain-3.jpg") center center/cover;
     background-size: cover;
     grid-column: 2 / span 1;
   }
