--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,10 @@ img {
   max-width: 550px;
 }
 
+.icons-3 {
+  margin-bottom: 3rem;
+}
+
 .icons-3 a {
   display: none;
 }
@@ -545,12 +549,12 @@ a.ui-button:active,
 
 .select-other > input {
   font-size: 1.3rem;
-}
+} */
 
 .tax-p {
   font-size: 14px;
   margin: 0;
-} */
+}
 
 /* 2 - Payment Type */
 
@@ -715,7 +719,7 @@ a.ui-button:active,
 }
 
 .donation-form {
-  display: grid;
+  /* display: grid; */
   border: 2px solid var(--primary-color);
   color: #333;
   padding: 1rem;
@@ -727,7 +731,7 @@ a.ui-button:active,
 }
 
 /* Select Menu */
-.ui-widget {
+/* .ui-widget {
   font-family: Roboto, sans-serif !important;
 }
 
@@ -815,18 +819,20 @@ a.ui-button:active,
 .dn-f > span {
   padding: 10px;
   margin-left: 10px;
-}
+} */
 
 /* Checkbox Radio Donation Amount */
 
 .donation-am {
+  display: flex;
+  justify-content: center;
   font-size: 20px;
   font-family: Roboto, sans-serif;
   border: none;
   color: #333;
 }
 
-.donation-am > div {
+/* .donation-am > div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 10px;
@@ -835,7 +841,7 @@ a.ui-button:active,
 .donation-am > div > div {
   margin-right: 0;
   border-radius: 3px;
-}
+} */
 
 .donation-am label {
   width: 100%;
@@ -846,7 +852,7 @@ a.ui-button:active,
   color: #fff;
   opacity: 0.6;
 }
-.ui-checkboxradio-radio-label .ui-icon-background {
+/* .ui-checkboxradio-radio-label .ui-icon-background {
   display: none;
 }
 
@@ -883,10 +889,10 @@ a.ui-button:active,
 .tax-p {
   font-size: 14px;
   margin: 0;
-}
+} */
 
 /* 2 - Payment Type */
-
+/* 
 .donation-payment-cc-exp {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -981,10 +987,42 @@ a.ui-button:active,
   grid-column: 1 / span 2;
   margin-top: 18px;
 }
+*/
+
+/* Stripe Checkout Styling */
+
+
+.StripeElement {
+  box-sizing: border-box;
+
+  height: 40px;
+
+  padding: 10px 12px;
+
+  border: 1px solid transparent;
+  border-radius: 4px;
+  background-color: white;
+
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
 
 /* Overlay */
 
-.maintenance {
+/* .maintenance {
   align-items: center;
   justify-content: center;
 }
@@ -1021,7 +1059,7 @@ a.ui-button:active,
 
   opacity: 0.9;
   z-index: 1;
-}
+} */
 
 /* Team */
 .founders {
