--- a/css/mobile.css
+++ b/css/mobile.css
@@ -268,6 +268,7 @@
   }
   .hero .content h1 {
     font-size: 3rem;
+    margin-top: 0;
   }
   .navbar {
     padding: 0;
@@ -372,6 +373,10 @@
 
   .section-header h2 {
     font-size: 2.5rem;
+  }
+
+  .flex-columns h2 {
+    font-size: 2.3rem;
   }
 
   .flex-columns p {
