--- a/css/mobile.css
+++ b/css/mobile.css
@@ -216,7 +216,7 @@
   }
 
   .gal-5 {
-    background: url("../images/jpg/Nepal/bandipur.jpg") center center/cover;
+    background: url("../images/gal/mtn-cloud-crop.jpeg") center center/cover;
     background-size: cover;
   }
 
